@@ -207,6 +207,20 @@ hopes of attracting fish of a particular kind.  Bits of meat are best \
 obtained through the Butchering, Fishing, or Trawling skills.  Bait list \
 can be used to list the types of fish that can be baited for.
 
+BMARKET=BLACKMARKETEERING
+BLACK_MARKETEERING=BLACKMARKETEERING
+BLACKMARKETEERING=<ABILITY>\
+Usage    : BMARKET ([LIST/REMOVE]) [ITEM NAME] ([PRICE])\n\r\
+Example  : bmarket list\n\r\
+:        : bmarket shoe 500\n\r\
+:        : bmarket all.shoe\n\r\
+:        : bmarket remove shoe\n\r\
+This skill allows a player to behave like a shopkeeper who deals in illicit trade, \
+allowing other players to LIST, BUY, and VIEW stolen items which the player has \
+put up for sale. The player may add any stolen item from their inventory to their \
+items for sale, and set a price for the item.  The remove command may be used to \
+take items of that name off the market.
+
 BLACKSMITH=BLACKSMITHING
 BLACKSMITHING=<ABILITY>\
 Usage    : BLACKSMITH (LIST/LEARN/INFO) (BUNDLE [NUM]) [ITEM TYPE]\n\r\
